--- a/.github/workflows/test-installer.yml
+++ b/.github/workflows/test-installer.yml
@@ -17,8 +17,8 @@ jobs:
           curl -fsSL https://karate.sh/install.sh | sh -s -- --bin-dir $HOME/.local/bin
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Setup Karate (JAR only, use system JRE)
-        run: karate setup path
+      - name: Setup Karate (uses system JRE, downloads JAR)
+        run: karate setup --components jar
 
       - name: Verify installation (system JRE)
         run: |
@@ -33,8 +33,8 @@ jobs:
           karate smoke.feature
           echo "Exit code: $?"
 
-      - name: Setup managed JRE
-        run: karate setup jre
+      - name: Download managed JRE
+        run: karate setup --components jre --force
 
       - name: Verify installation (managed JRE)
         env:
@@ -62,8 +62,8 @@ jobs:
           .\install.ps1 -InstallDir $InstallDir
           echo "$InstallDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
-      - name: Setup Karate (JAR only, use system JRE)
-        run: karate setup path
+      - name: Setup Karate (uses system JRE, downloads JAR)
+        run: karate setup --components jar
 
       - name: Verify installation (system JRE)
         run: |
@@ -78,8 +78,8 @@ jobs:
           karate smoke.feature
           echo "Exit code: $LASTEXITCODE"
 
-      - name: Setup managed JRE
-        run: karate setup jre
+      - name: Download managed JRE
+        run: karate setup --components jre --force
 
       - name: Verify installation (managed JRE)
         env:
