[no ci] fix test installer to ensure JRE install works

--- a/.github/workflows/test-installer.yml
+++ b/.github/workflows/test-installer.yml
@@ -17,10 +17,10 @@ jobs:
           curl -fsSL https://karate.sh/install.sh | sh -s -- --bin-dir $HOME/.local/bin
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Setup Karate (uses system JRE, downloads JAR)
-        run: karate setup --components jar
+      - name: Setup Karate (JRE + JAR)
+        run: karate setup --all --force
 
-      - name: Verify installation (system JRE)
+      - name: Verify installation
         run: |
           karate version
           karate doctor
@@ -28,27 +28,8 @@ jobs:
       - name: Fetch smoke test
         run: curl -fsSL https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/test/smoke.feature -o smoke.feature
 
-      - name: Run smoke test with system JRE
-        run: |
-          karate smoke.feature
-          echo "Exit code: $?"
-
-      - name: Download managed JRE
-        run: karate setup --components jre --force
-
-      - name: Verify installation (managed JRE)
-        env:
-          JAVA_HOME: ""
-        run: |
-          karate version
-          karate doctor
-
-      - name: Run smoke test with managed JRE
-        env:
-          JAVA_HOME: ""
-        run: |
-          karate smoke.feature
-          echo "Exit code: $?"
+      - name: Run smoke test
+        run: karate smoke.feature
 
   test-windows:
     name: Test Installer (windows-latest)
@@ -62,10 +43,10 @@ jobs:
           .\install.ps1 -InstallDir $InstallDir
           echo "$InstallDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
-      - name: Setup Karate (uses system JRE, downloads JAR)
-        run: karate setup --components jar
+      - name: Setup Karate (JRE + JAR)
+        run: karate setup --all --force
 
-      - name: Verify installation (system JRE)
+      - name: Verify installation
         run: |
           karate version
           karate doctor
@@ -73,24 +54,5 @@ jobs:
       - name: Fetch smoke test
         run: Invoke-WebRequest -Uri "https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/test/smoke.feature" -OutFile smoke.feature
 
-      - name: Run smoke test with system JRE
-        run: |
-          karate smoke.feature
-          echo "Exit code: $LASTEXITCODE"
-
-      - name: Download managed JRE
-        run: karate setup --components jre --force
-
-      - name: Verify installation (managed JRE)
-        env:
-          JAVA_HOME: ""
-        run: |
-          karate version
-          karate doctor
-
-      - name: Run smoke test with managed JRE
-        env:
-          JAVA_HOME: ""
-        run: |
-          karate smoke.feature
-          echo "Exit code: $LASTEXITCODE"
+      - name: Run smoke test
+        run: karate smoke.feature
